# TemplateMatchingCuda

./: .cproject  .project  CMakeLists.txt  README.md
source/: test.cu
